syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract.v1;
message Events {
    repeated MarginpoolFactory_PoolCreated marginpool_factory_pool_createds = 1;
    repeated MarginPool_MarginTradeReport margin_pool_margin_trade_reports = 2;
}

message MarginpoolFactory_PoolCreated {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes pool = 5;
}
  
message MarginPool_MarginTradeReport {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string evt_address = 5;
    bytes security = 6;
    bytes order_ref = 7;
    bytes party = 8;
    bytes counterparty = 9;
    bytes order_type = 10;
    string price = 11;
    bytes currency = 12;
    string amount = 13;
    string execution_date = 14;
}

message MarginPoolTradeReports {
  string pool_address = 1;
  repeated MarginPool_MarginTradeReport items = 2;
}

message MarginPoolTradeReportsList {
  repeated MarginPoolTradeReports items = 1;
}